<resources>
    <string name="app_name">Sheviakov - Lab 2</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="save">Save</string>
    <string name="invalid_data">Invalid data!</string>
    <string name="notes_are_empty">Notes are empty!</string>
    <string name="choose_option">Choose action</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="search">Search</string>
</resources>
