<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.sheviakov.lab_2.AddNoteActivity">


    <ImageView
        android:id="@+id/add_note_image"
        android:layout_width="217dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/add_note_save_button"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/add_note_save_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_default_note" />

    <EditText
        android:id="@+id/add_note_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_image"
        tools:text="Some Name" />

    <EditText
        android:id="@+id/add_note_desc_edit_text"
        android:lines="5"
        android:gravity="top|start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_name_edit_text"
        tools:text="Description" />

    <RadioGroup
        android:id="@+id/add_note_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_desc_edit_text">


        <RadioButton
            android:id="@+id/add_note_high_radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="#ff0000"
            android:text="@string/high"
            android:textColor="#ff0000" />

        <RadioButton
            android:id="@+id/add_note_medium_radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="#ffa500"
            android:text="@string/medium"
            android:textColor="#ffa500" />

        <RadioButton
            android:id="@+id/add_note_low_radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:buttonTint="#00ff00"
            android:text="@string/low"
            android:textColor="#00ff00" />

    </RadioGroup>

    <Button
        android:id="@+id/add_note_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_date_button" />

    <Button
        android:id="@+id/add_note_date_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_note_radiogroup" />


</androidx.constraintlayout.widget.ConstraintLayout>